@@ -18,8 +18,18 @@ t/30-manifest_skip.t
 t/35-git_ignore.t
 t/40-remove_unwanted_files.t
 t/45-init.t
-t/50-full_run.t
-t/55-move_distribution_files.t
+t/50-move_distribution_files.t
+t/55-full_run.t
+t/data/module_template/.github/workflows/github_ci_default.yml
+t/data/module_template/Changes
+t/data/module_template/lib/Test/Module.pm
+t/data/module_template/Makefile.PL
+t/data/module_template/MANIFEST
+t/data/module_template/MANIFEST.SKIP
+t/data/module_template/t/00-load.t
+t/data/module_template/t/manifest.t
+t/data/module_template/t/pod-coverage.t
+t/data/module_template/t/pod.t
 t/data/orig/Bad.pm
 t/data/orig/github_ci_default.yml
 t/data/orig/Makefile.PL
